fix: improve design on desktop + close sidebar on mobile when clicked on something
(cherry picked from commit 200d2bb6d1d820749f7215bf4f529f95a33da38b)

--- a/public/app/css/styles.css
+++ b/public/app/css/styles.css
@@ -37,7 +37,12 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #000000;
 }
-.sidebar {
+
+body {
+  overflow-y: hidden;
+}
+
+.sidebar, main {
   max-height: calc(100vh - 45px);
   overflow-y: scroll;
 }
